[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/black_sq_100px.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TransitionSquares.gd" type="Script" id=2]
[ext_resource path="res://Assets/loading_screen.png" type="Texture" id=3]

[node name="TransitionSquares" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="SquaresContainer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SquaresContainer"]
position = Vector2( 13, 0 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="SquaresContainer"]
position = Vector2( 113, 0 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="SquaresContainer"]
position = Vector2( 213, 0 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="SquaresContainer"]
position = Vector2( 313, 0 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="SquaresContainer"]
position = Vector2( 413, 0 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="SquaresContainer"]
position = Vector2( 513, 0 )
texture = ExtResource( 1 )

[node name="Sprite7" type="Sprite" parent="SquaresContainer"]
position = Vector2( 613, 0 )
texture = ExtResource( 1 )

[node name="Sprite8" type="Sprite" parent="SquaresContainer"]
position = Vector2( 713, 0 )
texture = ExtResource( 1 )

[node name="Sprite9" type="Sprite" parent="SquaresContainer"]
position = Vector2( 813, 0 )
texture = ExtResource( 1 )

[node name="Sprite10" type="Sprite" parent="SquaresContainer"]
position = Vector2( 913, 0 )
texture = ExtResource( 1 )

[node name="Sprite11" type="Sprite" parent="SquaresContainer"]
position = Vector2( 1013, 0 )
texture = ExtResource( 1 )

[node name="Sprite12" type="Sprite" parent="SquaresContainer"]
position = Vector2( 13, 100 )
texture = ExtResource( 1 )

[node name="Sprite13" type="Sprite" parent="SquaresContainer"]
position = Vector2( 113, 100 )
texture = ExtResource( 1 )

[node name="Sprite14" type="Sprite" parent="SquaresContainer"]
position = Vector2( 213, 100 )
texture = ExtResource( 1 )

[node name="Sprite15" type="Sprite" parent="SquaresContainer"]
position = Vector2( 313, 100 )
texture = ExtResource( 1 )

[node name="Sprite16" type="Sprite" parent="SquaresContainer"]
position = Vector2( 413, 100 )
texture = ExtResource( 1 )

[node name="Sprite17" type="Sprite" parent="SquaresContainer"]
position = Vector2( 513, 100 )
texture = ExtResource( 1 )

[node name="Sprite18" type="Sprite" parent="SquaresContainer"]
position = Vector2( 613, 100 )
texture = ExtResource( 1 )

[node name="Sprite19" type="Sprite" parent="SquaresContainer"]
position = Vector2( 713, 100 )
texture = ExtResource( 1 )

[node name="Sprite20" type="Sprite" parent="SquaresContainer"]
position = Vector2( 813, 100 )
texture = ExtResource( 1 )

[node name="Sprite21" type="Sprite" parent="SquaresContainer"]
position = Vector2( 913, 100 )
texture = ExtResource( 1 )

[node name="Sprite22" type="Sprite" parent="SquaresContainer"]
position = Vector2( 1013, 100 )
texture = ExtResource( 1 )

[node name="Sprite23" type="Sprite" parent="SquaresContainer"]
position = Vector2( 13, 200 )
texture = ExtResource( 1 )

[node name="Sprite24" type="Sprite" parent="SquaresContainer"]
position = Vector2( 113, 200 )
texture = ExtResource( 1 )

[node name="Sprite25" type="Sprite" parent="SquaresContainer"]
position = Vector2( 213, 200 )
texture = ExtResource( 1 )

[node name="Sprite26" type="Sprite" parent="SquaresContainer"]
position = Vector2( 313, 200 )
texture = ExtResource( 1 )

[node name="Sprite27" type="Sprite" parent="SquaresContainer"]
position = Vector2( 413, 200 )
texture = ExtResource( 1 )

[node name="Sprite28" type="Sprite" parent="SquaresContainer"]
position = Vector2( 513, 200 )
texture = ExtResource( 1 )

[node name="Sprite29" type="Sprite" parent="SquaresContainer"]
position = Vector2( 613, 200 )
texture = ExtResource( 1 )

[node name="Sprite30" type="Sprite" parent="SquaresContainer"]
position = Vector2( 713, 200 )
texture = ExtResource( 1 )

[node name="Sprite31" type="Sprite" parent="SquaresContainer"]
position = Vector2( 813, 200 )
texture = ExtResource( 1 )

[node name="Sprite32" type="Sprite" parent="SquaresContainer"]
position = Vector2( 913, 200 )
texture = ExtResource( 1 )

[node name="Sprite33" type="Sprite" parent="SquaresContainer"]
position = Vector2( 1013, 200 )
texture = ExtResource( 1 )

[node name="Sprite34" type="Sprite" parent="SquaresContainer"]
position = Vector2( 13, 300 )
texture = ExtResource( 1 )

[node name="Sprite35" type="Sprite" parent="SquaresContainer"]
position = Vector2( 113, 300 )
texture = ExtResource( 1 )

[node name="Sprite36" type="Sprite" parent="SquaresContainer"]
position = Vector2( 213, 300 )
texture = ExtResource( 1 )

[node name="Sprite37" type="Sprite" parent="SquaresContainer"]
position = Vector2( 313, 300 )
texture = ExtResource( 1 )

[node name="Sprite38" type="Sprite" parent="SquaresContainer"]
position = Vector2( 413, 300 )
texture = ExtResource( 1 )

[node name="Sprite39" type="Sprite" parent="SquaresContainer"]
position = Vector2( 513, 300 )
texture = ExtResource( 1 )

[node name="Sprite40" type="Sprite" parent="SquaresContainer"]
position = Vector2( 613, 300 )
texture = ExtResource( 1 )

[node name="Sprite41" type="Sprite" parent="SquaresContainer"]
position = Vector2( 713, 300 )
texture = ExtResource( 1 )

[node name="Sprite42" type="Sprite" parent="SquaresContainer"]
position = Vector2( 813, 300 )
texture = ExtResource( 1 )

[node name="Sprite43" type="Sprite" parent="SquaresContainer"]
position = Vector2( 913, 300 )
texture = ExtResource( 1 )

[node name="Sprite44" type="Sprite" parent="SquaresContainer"]
position = Vector2( 1013, 300 )
texture = ExtResource( 1 )

[node name="Sprite45" type="Sprite" parent="SquaresContainer"]
position = Vector2( 13, 400 )
texture = ExtResource( 1 )

[node name="Sprite46" type="Sprite" parent="SquaresContainer"]
position = Vector2( 113, 400 )
texture = ExtResource( 1 )

[node name="Sprite47" type="Sprite" parent="SquaresContainer"]
position = Vector2( 213, 400 )
texture = ExtResource( 1 )

[node name="Sprite48" type="Sprite" parent="SquaresContainer"]
position = Vector2( 313, 400 )
texture = ExtResource( 1 )

[node name="Sprite49" type="Sprite" parent="SquaresContainer"]
position = Vector2( 413, 400 )
texture = ExtResource( 1 )

[node name="Sprite50" type="Sprite" parent="SquaresContainer"]
position = Vector2( 513, 400 )
texture = ExtResource( 1 )

[node name="Sprite51" type="Sprite" parent="SquaresContainer"]
position = Vector2( 613, 400 )
texture = ExtResource( 1 )

[node name="Sprite52" type="Sprite" parent="SquaresContainer"]
position = Vector2( 713, 400 )
texture = ExtResource( 1 )

[node name="Sprite53" type="Sprite" parent="SquaresContainer"]
position = Vector2( 813, 400 )
texture = ExtResource( 1 )

[node name="Sprite54" type="Sprite" parent="SquaresContainer"]
position = Vector2( 913, 400 )
texture = ExtResource( 1 )

[node name="Sprite55" type="Sprite" parent="SquaresContainer"]
position = Vector2( 1013, 400 )
texture = ExtResource( 1 )

[node name="Sprite56" type="Sprite" parent="SquaresContainer"]
position = Vector2( 13, 500 )
texture = ExtResource( 1 )

[node name="Sprite57" type="Sprite" parent="SquaresContainer"]
position = Vector2( 113, 500 )
texture = ExtResource( 1 )

[node name="Sprite58" type="Sprite" parent="SquaresContainer"]
position = Vector2( 213, 500 )
texture = ExtResource( 1 )

[node name="Sprite59" type="Sprite" parent="SquaresContainer"]
position = Vector2( 313, 500 )
texture = ExtResource( 1 )

[node name="Sprite60" type="Sprite" parent="SquaresContainer"]
position = Vector2( 413, 500 )
texture = ExtResource( 1 )

[node name="Sprite61" type="Sprite" parent="SquaresContainer"]
position = Vector2( 513, 500 )
texture = ExtResource( 1 )

[node name="Sprite62" type="Sprite" parent="SquaresContainer"]
position = Vector2( 613, 500 )
texture = ExtResource( 1 )

[node name="Sprite63" type="Sprite" parent="SquaresContainer"]
position = Vector2( 713, 500 )
texture = ExtResource( 1 )

[node name="Sprite64" type="Sprite" parent="SquaresContainer"]
position = Vector2( 813, 500 )
texture = ExtResource( 1 )

[node name="Sprite65" type="Sprite" parent="SquaresContainer"]
position = Vector2( 913, 500 )
texture = ExtResource( 1 )

[node name="Sprite66" type="Sprite" parent="SquaresContainer"]
position = Vector2( 1013, 500 )
texture = ExtResource( 1 )

[node name="Sprite67" type="Sprite" parent="SquaresContainer"]
position = Vector2( 13, 600 )
texture = ExtResource( 1 )

[node name="Sprite68" type="Sprite" parent="SquaresContainer"]
position = Vector2( 113, 600 )
texture = ExtResource( 1 )

[node name="Sprite69" type="Sprite" parent="SquaresContainer"]
position = Vector2( 213, 600 )
texture = ExtResource( 1 )

[node name="Sprite70" type="Sprite" parent="SquaresContainer"]
position = Vector2( 313, 600 )
texture = ExtResource( 1 )

[node name="Sprite71" type="Sprite" parent="SquaresContainer"]
position = Vector2( 413, 600 )
texture = ExtResource( 1 )

[node name="Sprite72" type="Sprite" parent="SquaresContainer"]
position = Vector2( 513, 600 )
texture = ExtResource( 1 )

[node name="Sprite73" type="Sprite" parent="SquaresContainer"]
position = Vector2( 613, 600 )
texture = ExtResource( 1 )

[node name="Sprite74" type="Sprite" parent="SquaresContainer"]
position = Vector2( 713, 600 )
texture = ExtResource( 1 )

[node name="Sprite75" type="Sprite" parent="SquaresContainer"]
position = Vector2( 813, 600 )
texture = ExtResource( 1 )

[node name="Sprite76" type="Sprite" parent="SquaresContainer"]
position = Vector2( 913, 600 )
texture = ExtResource( 1 )

[node name="Sprite77" type="Sprite" parent="SquaresContainer"]
position = Vector2( 1013, 600 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="LoadingSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
